# copa2022

./: .gitignore  README.md  backdrop.py  catar.kv  catar.py  copa2022.kv  exemple.py  jogadores.html  main.py  matchs.json  matchs.kv  oitavas.json  players.json  playoffs16.kv  pyproject.toml  results  results.json  rodada1.json  sliver.py  stadiums.kv  tabela.kv  tabela.py  teams.json
baseclass/grupoa/team1/: convocados.kv  convocados.py
