[tool.poetry]
name = "copa2022"
version = "0.1.0"
description = ""
authors = ["felipec <felipecmelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
blue = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
